<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.fbm.test_dut_2a.Exercice2Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercice2_question"/>

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radiobutton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercice2_reponse1"/>
        <RadioButton
            android:id="@+id/radiobutton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercice2_reponse2"/>
        <RadioButton
            android:id="@+id/radiobutton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercice2_reponse3"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercice2_valider"
        android:onClick="exercice2Valider"/>
    <TextView
        android:id="@+id/exercice2_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercice2_message"/>
</LinearLayout>
